tests/rosetta/out/C/binary-strings.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:53Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:53Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static list_int slice_list_int(list_int v, int start, int end) {
  if (start < 0)
    start += v.len;
  if (end < 0)
    end += v.len;
  if (start < 0)
    start = 0;
  if (end > v.len)
    end = v.len;
  if (start > end)
    start = end;
  list_int r = list_int_create(end - start);
  for (int i = 0; i < r.len; i++)
    r.data[i] = v.data[start + i];
  return r;
}
static int i = 0;

char *_char(int n) {
  char *letters = "abcdefghijklmnopqrstuvwxyz";
  int idx = n - 97;
  if (idx < 0 || idx >= strlen(letters)) {
    return "?";
  }
  return slice_string(letters, idx, idx + 1);
}

char *fromBytes(list_int bs) {
  char *s = "";
  int i = 0;
  while (i < bs.len) {
    s = s + _char(bs.data[i]);
    i = i + 1;
  }
  return s;
}

int _mochi_main() {
  list_int b = list_int_create(6);
  b.data[0] = 98;
  b.data[1] = 105;
  b.data[2] = 110;
  b.data[3] = 97;
  b.data[4] = 114;
  b.data[5] = 121;
  list_int tmp1 = list_int_create(6);
  tmp1.data[0] = 98;
  tmp1.data[1] = 105;
  tmp1.data[2] = 110;
  tmp1.data[3] = 97;
  tmp1.data[4] = 114;
  tmp1.data[5] = 121;
  char *tmp2 = _str(tmp1);
  printf("%s\n", tmp2);
  list_int c = list_int_create(6);
  c.data[0] = 98;
  c.data[1] = 105;
  c.data[2] = 110;
  c.data[3] = 97;
  c.data[4] = 114;
  c.data[5] = 121;
  list_int tmp3 = list_int_create(6);
  tmp3.data[0] = 98;
  tmp3.data[1] = 105;
  tmp3.data[2] = 110;
  tmp3.data[3] = 97;
  tmp3.data[4] = 114;
  tmp3.data[5] = 121;
  char *tmp4 = _str(tmp3);
  printf("%s\n", tmp4);
  int tmp5 = 1;
  if (6 != 6) {
    tmp5 = 0;
  } else {
    for (int i6 = 0; i6 < 6; i6++) {
      if (b.data[i6] != c.data[i6]) {
        tmp5 = 0;
        break;
      }
    }
  }
  char *tmp7 = _str(tmp5);
  printf("%s\n", tmp7);
  list_int d = list_int_create(0);
  while (i < 6) {
    int tmp8_data[1];
    list_int tmp8 = {1, tmp8_data};
    tmp8.data[0] = b.data[i];
    list_int tmp9 = concat_list_int(d, tmp8);
    d = tmp9;
    i = i + 1;
  }
  d.data[1] = 97;
  d.data[4] = 110;
  list_int tmp10 = list_int_create(6);
  tmp10.data[0] = 98;
  tmp10.data[1] = 105;
  tmp10.data[2] = 110;
  tmp10.data[3] = 97;
  tmp10.data[4] = 114;
  tmp10.data[5] = 121;
  printf("%s\n", fromBytes(tmp10));
  printf("%s\n", fromBytes(d));
  char *tmp11 = _str(6 == 0);
  printf("%s\n", tmp11);
  list_int tmp12 = list_int_create(7);
  tmp12.data[0] = 98;
  tmp12.data[1] = 105;
  tmp12.data[2] = 110;
  tmp12.data[3] = 97;
  tmp12.data[4] = 114;
  tmp12.data[5] = 121;
  tmp12.data[6] = 122;
  list_int z = tmp12;
  printf("%s\n", fromBytes(z));
  list_int tmp13 = slice_list_int(b, 1, 3);
  list_int sub = tmp13;
  printf("%s\n", fromBytes(sub));
  list_int f = list_int_create(0);
  i = 0;
  while (i < d.len) {
    int val = d.data[i];
    if (val == 110) {
      int tmp14_data[1];
      list_int tmp14 = {1, tmp14_data};
      tmp14.data[0] = 109;
      list_int tmp15 = concat_list_int(f, tmp14);
      f = tmp15;
    } else {
      int tmp16_data[1];
      list_int tmp16 = {1, tmp16_data};
      tmp16.data[0] = val;
      list_int tmp17 = concat_list_int(f, tmp16);
      f = tmp17;
    }
    i = i + 1;
  }
  printf("%s\n", fromBytes(d) + " -> " + fromBytes(f));
  list_int rem = list_int_create(0);
  int tmp18_data[1];
  list_int tmp18 = {1, tmp18_data};
  tmp18.data[0] = b.data[0];
  list_int tmp19 = concat_list_int(rem, tmp18);
  rem = tmp19;
  i = 3;
  while (i < 6) {
    int tmp20_data[1];
    list_int tmp20 = {1, tmp20_data};
    tmp20.data[0] = b.data[i];
    list_int tmp21 = concat_list_int(rem, tmp20);
    rem = tmp21;
    i = i + 1;
  }
  printf("%s\n", fromBytes(rem));
  return 0;
}
int main() { return _mochi_main(); }
